支持 ViewPager 嵌套 Fragment 的路径统计！成功了！！！

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/viewpager"
+        app:layout_constraintTop_toBottomOf="@id/stat"
+        android:text="ViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/singleFragment"
+        app:layout_constraintTop_toBottomOf="@id/viewpager"
+        android:text="单个Fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
