重新做次调整

--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ViewPagerActivity">
 
-    <com.qq.reader.widget.PathStatViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
